--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Chat</title>
   </head>
-  <body>
+  <body class="bg-emerald-500">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
